--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
 x Setup dev enviroment.
 x Get and setup Bootstrap.
-* Create header layout with Bootstrap.
+x Find out: Which html5 tags to use for layout? <div> stands for division, which is good for the Bootstrap grid.
+x Create header layout with Bootstrap.
+
 * Move script tags to head.
