Began adding js functionality to the site.
Created the functionality to add columns to the DOM.

--- a/todo.txt
+++ b/todo.txt
@@ -10,9 +10,8 @@ x Create layout for <main> and <aside>.
 * Finetune misc. bugs in responsive layout.
     * Move the button and price tag to the bottom of the cards.
     x On wide mobile view, the cards' title, description, button, and price fits on one line. Make it so they don't.
-* Implement Babel in gulp?
-    * Install Babel: npm install --save-dev gulp-babel babel-core babel-preset-env
-
+x Implement Babel in gulp.
+    - Install Babel: npm install --save-dev gulp-babel babel-core babel-preset-env
 * Import product data from external document.
     * Create a javascript class for the product.
     * Create an object from the class, with data from a variable holding json data.
