Added local storage support to the orders catalog.
Orders are saved in localstorage, but are not yet loaded from it.
Updated the todo list.

--- a/todo.txt
+++ b/todo.txt
@@ -22,19 +22,24 @@ x Implement Babel in gulp.
 x Make JS responsible for displaying how many orders there is in the orders list.
     x Create function that counts how many rows there is in the orders list.
     x Create a function that updates the 'pill' with the counted number of orders.
-* Make JS responsible for tallying up.
-    * Create a function that outputs an array of numbers; the individual prices of the orders in the order catalog.
-    * Create a function that calculates the total sum to pay.
-    * Create a function that displays the calculated sum.
 * Create order class.
-    * Create order object when a 'Bestil' btn is clicked.
-    * Add order obj to order catalog.
-    * Call the displayOrderCount() when a 'Bestil' btn is clicked.
+    x Create order object when a 'Bestil' btn is clicked.
+    x Add order obj to order catalog.
+    x Call the displayOrderCount() when a 'Bestil' btn is clicked.
     * Calculate and display the new order sum total when a new order has been added.
+* Store the contents of the order catalog on the computer.
+    x Decide whether to use local or session storage.
+    - Use localStorage. It would be very annoying to lose your carefully selected coffee orders by mistakenly closing the tab.
+    * When adding an order to the order catalog, at the same time add it to storage.
+* Make JS responsible for tallying up.
+    * Create a function that adds all the price value-pairs in storage together, and returns the result.
+    * Create a function that displays the calculated sum.
 
 x Move script tags to head.
 
 ---
 
 Ting jeg ikke ved...
-- Hvad bliver der af objekterne i min for løkke, efter de er brugt til a lave mit user interface? Ligger de stadigvæk i hukommelsen, eller...?
+- Hvad bliver der af objekterne i min for-løkke, efter de er brugt til a lave mit user interface? Ligger de stadigvæk i hukommelsen, eller...?
+- Hvordan implementerer jeg 'seperation of concerns'?
+- Hvordan tager jeg hensyn til ES2015 hoisting?
